# PodcastGen-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  podcast_gen_colab.ipynb  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements.txt
podcast_gen_agent/: __init__.py  api.py  compat.py  config.py  graph.py  main.py  state.py
podcast_gen_agent/nodes/: __init__.py  audio_assembler.py  fail.py  music_generator.py  research.py  script_generator.py  voice_synthesis.py
podcast_gen_agent/utils/: audio.py  decorators.py  gpu.py  logging_config.py  output.py  research_sources.py  slug.py  text.py
scripts/: colab_bootstrap.py  colab_install.py  install_colab.sh
tests/: test_audio_utils.py  test_compat_output.py  test_graph.py  test_research_node.py  test_research_sources.py  test_text_and_state.py  test_voice_fallback.py  test_voice_tuning.py
