[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-gen-agent"
version = "0.2.0"
description = "Autonomous podcast generator using LangGraph, XTTS-v2, and MusicGen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "torch>=2.0.0,<3.0.0",
    "torchaudio>=2.0.0,<3.0.0",
    "transformers==4.43.3",
    "bitsandbytes>=0.43.0,<0.46.0",
    "accelerate>=0.28.0,<1.0.0",
    "coqui-tts>=0.24.0,<0.26.0",
    "audiocraft>=1.3.0,<2.0.0",
    "pydub>=0.25.0,<0.26.0",
    "scipy>=1.12.0,<2.0.0",
    "duckduckgo-search>=6.0.0,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[project.scripts]
podcast-gen = "podcast_gen_agent.main:main"

[tool.setuptools.packages.find]
include = ["podcast_gen_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
